= Jsus Changelog
== Version 0.1.5
* Introduced new concept, Tag, which is going to be used instead of 
  provides/requires strings

== Version 0.1.4
* Switched from OptiFlag to Choice for command-line parsing in jsus utility
* Miscellanous changes here and there

== Version 0.1.3
* Updated Pool class with dependency resolvers
* Added Package#include_external_dependencies!
  * Included external dependencies won't show in its Package#dependencies
  * Same for external provides

* Revamped command-line interface for jsus utility
  * Added dependencies compilation

== Version 0.1.2
* Removed Bundler class which seemed like totally unneccessary
* jsus command-line utility now works in single-project mode
* Some major refactoring, introduced new concepts: Pool, Packager and Container
* Inserted license text to LICENSE, updated TODO

== Version 0.1.1 (not released)
* Massive refactoring
* Moved out packing logic to brand new Packager and Container classes

== Version 0.1.0
* Initial release