@@ -2,15 +2,13 @@ module Jsus
   class SourceFile
     attr_accessor :relative_filename
     attr_accessor :filename
-    attr_accessor :content
     attr_accessor :package
     # constructors
 
     def initialize(options = {})
-      [:package, :header, :relative_filename, :filename, :content].each do |field|
+      [:package, :header, :relative_filename, :filename, :content, :pool].each do |field|
         send("#{field}=", options[field]) if options[field]
       end
-      options[:pool] << self if options[:pool]
     end
 
     def self.from_file(filename, options = {})
@@ -24,11 +22,11 @@ module Jsus
           options[:content]           = source
           new(options)
         else
-          #puts "WARNING: file #{filename} has invalid format (should be YAML)"
+#          puts "WARNING: file #{filename} has invalid format (should be YAML)"
           nil
         end
       else
-        #puts "WARNING: file #{filename} does not exist"
+#        puts "WARNING: file #{filename} does not exist"
         nil
       end
     end
@@ -38,10 +36,29 @@ module Jsus
       @header = new_header
       # prepare defaults
       @header["description"] ||= ""
+      # handle 
       @dependencies = [@header["requires"] || []].flatten
       @dependencies.map! {|tag_name| Tag.new(tag_name, :package => package) }
       @provides = [@header["provides"] || []].flatten
       @provides.map! {|tag_name| Tag.new(tag_name, :package => package) }
+      @extends = (@header["extends"] && !@header["extends"].empty?) ? Tag.new(@header["extends"]) : nil
+    end
+
+    def content=(new_value)
+      @content = new_value
+    end
+
+    def content
+      [@content, extensions.map {|e| e.content}].flatten.compact.join("\n")
+    end
+
+    def pool=(new_value)
+      @pool = new_value
+      @pool << self if @pool
+    end
+
+    def pool
+      @pool
     end
 
     def header
@@ -71,8 +88,38 @@ module Jsus
       provides.map {|p| p.name(options)}
     end
 
+    def extends
+      @extends
+    end
+
+    def extension?
+      extends && !extends.empty?
+    end
+
+    def extensions
+      @extensions ||= []
+      @extensions = @extensions.flatten.compact.uniq
+      @extensions
+    end
+
+    def extensions=(new_value)
+      @extensions = new_value
+    end
+
+    def include_extensions!
+      if pool        
+        provides.each do |p|
+          extensions << pool.lookup_extensions(p)
+        end
+      end
+    end
+
     def description
       header["description"]
+    end
+
+    def required_files
+      [filename, extensions.map {|e| e.filename}].flatten
     end
 
     def to_hash
