@@ -1,0 +1,13 @@
+/*
+---
+
+script: Class.js
+
+description: Contains the Class Function for easily creating, extending, and implementing reusable Classes.
+
+license: MIT-style license.
+
+provides: [Class]
+
+...
+*/
