@@ -1,0 +1,8 @@
+name: Core
+filename: class.js
+description: Framework base stuff
+license: MIT-Style License, http://mootools.net/license
+copyright: Somebody
+authors: Someone
+sources:
+  - Source/Class.js
