@@ -1,0 +1,16 @@
+/*
+---
+
+script: Class.js
+
+description: Extension for Core/Class
+
+license: MIT-style license
+
+authors:
+- Valerio Proietti
+
+extends: "Core/Class"
+
+...
+*/
